# freton

./: manage.py  pyproject.toml
core/: exceptions.py  models.py  pagination.py  serializers.py
freight/: admin.py  models.py
freight/migrations/: 0001_initial.py
freton/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/fixtures/: driving_categories.json
users/migrations/: 0001_initial.py
